--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -147,11 +147,14 @@
     <ClInclude Include="entry.h" />
     <ClInclude Include="file_stream.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="gl_types.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="platform.h" />
     <ClInclude Include="primitives.h" />
     <ClInclude Include="renderer_init.h" />
+    <ClInclude Include="shader.h" />
+    <ClInclude Include="shape.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
   <ItemGroup>
@@ -168,7 +171,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="platform_win32.cpp" />
+    <ClCompile Include="primitives.cpp" />
     <ClCompile Include="renderer_init.cpp" />
+    <ClCompile Include="shader.cpp" />
+    <ClCompile Include="shape.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
