--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -147,15 +147,17 @@
     <ClInclude Include="application_manager.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="entry.h" />
-    <ClInclude Include="file_stream.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="fstring.h" />
+    <ClInclude Include="ftool.h" />
+    <ClInclude Include="geometry_system.h" />
     <ClInclude Include="input.h" />
+    <ClInclude Include="opengl_backend.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="platform.h" />
-    <ClInclude Include="primitives.h" />
     <ClInclude Include="renderer_backend.h" />
     <ClInclude Include="renderer_frontend.h" />
     <ClInclude Include="shader.h" />
+    <ClInclude Include="shader_system.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="transformations.h" />
     <ClInclude Include="window.h" />
@@ -164,19 +166,20 @@
     <ClCompile Include="application.cpp" />
     <ClCompile Include="application_manager.cpp" />
     <ClCompile Include="camera.cpp" />
-    <ClCompile Include="file_stream.cpp" />
+    <ClCompile Include="fstring.cpp" />
+    <ClCompile Include="ftool.cpp" />
+    <ClCompile Include="geometry_system.cpp" />
     <ClCompile Include="glad.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="input.cpp" />
+    <ClCompile Include="opengl_backend.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="platform_win32.cpp" />
-    <ClCompile Include="primitives.cpp" />
     <ClCompile Include="renderer_backend.cpp" />
     <ClCompile Include="renderer_frontend.cpp" />
     <ClCompile Include="shader.cpp" />
